# kavachx-fraud-intelligence

./: Dockerfile  README.md  app.py  environment.py  generate_report.py  grader.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.py  test_env.py  ~$VACH-X_Testing_Report.docx
scenarios/: easy_001.json  hard_001.json  hard_002.json  medium_001.json
server/: __init__.py  app.py
